--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
   max-width: 96%;
   margin:  0 auto;
 }
+.jm_container_lg {
+  max-width: 1920px;
+  margin: auto;
+}
 html{
   scroll-behavior: smooth;
 }
@@ -11,7 +15,7 @@ html{
 @tailwind utilities;
 
 .jm_nav{
-    @apply block lg:flex justify-between lg:col-span-3 items-center absolute lg:static lg:w-auto top-0 left-0 overflow-hidden h-screen lg:h-auto duration-500 bg-[#ff9aa6] lg:bg-[transparent] lg:p-0 z-50
+    @apply flex flex-col-reverse lg:flex-row lg:items-center lg:justify-between justify-end lg:col-span-3 gap-5 absolute lg:static lg:w-auto top-0 left-0 overflow-hidden h-screen lg:h-auto duration-500 bg-[#ff9aa6] lg:bg-[transparent] lg:p-0 z-50
   }
 
   .login_bg{
